Go to the definition of a grunt task.

--- a/tern.eclipse.ide.grunt.ui/src/tern/eclipse/ide/grunt/internal/ui/GruntUIMessages.properties
+++ b/tern.eclipse.ide.grunt.ui/src/tern/eclipse/ide/grunt/internal/ui/GruntUIMessages.properties
@@ -12,4 +12,8 @@
 # Grunt explorer
 RefreshExplorerAction_text=Refresh
 RefreshExplorerAction_tooltip=Refresh Grunt tasks
+GoToDefinitionAction_text=Go to Definition
+GoToDefinitionAction_tooltip=Go to Definition
+GruntExplorerView_openFile_error=Error open of task
+GruntExplorerView_openFileDialog_title=Error while opening tasks
 
