--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 	<modules>
 		<module>tern.eclipse.ide.grunt.core</module>
 		<module>tern.eclipse.ide.grunt.ui</module>
-		<module>update-site</module>
+		<!-- <module>update-site</module> -->
 	</modules>
 	<build>
 		<defaultGoal>clean install</defaultGoal>
@@ -86,6 +86,11 @@
 			<id>license-feature</id>
 			<url>http://download.eclipse.org/cbi/updates/license/</url>
 			<layout>p2</layout>
+		</repository>
+		<repository>
+			<id>tern.java</id>
+			<layout>p2</layout>
+			<url>http://oss.opensagres.fr/tern.repository/0.9.0-SNAPSHOT/</url>
 		</repository>
 	</repositories>
 </project>
