Execute task with launch.

--- a/tern.eclipse.ide.grunt.core/plugin.properties
+++ b/tern.eclipse.ide.grunt.core/plugin.properties
@@ -8,12 +8,7 @@
 # Contributors:
 #     Angelo Zerr <angelo.zerr@gmail.com> - Initial API and implementation 
 ###############################################################################
-pluginName=Tern Linter - Core
+pluginName=Grunt - Core
 providerName=Angelo ZERR
 
-# Extension Point
-ternLinterConfigurations.name=Tern grunt configurations
-
-# Validator
-Tern_Validator.name=Tern Validator
-validationMarker.name=Tern Problem
+GruntLaunchConfigurationDelegate.name=Grunt Task
