--- a/tern.eclipse.ide.grunt.core/plugin.xml
+++ b/tern.eclipse.ide.grunt.core/plugin.xml
@@ -2,7 +2,7 @@
 <?eclipse version="3.0"?>
 <!--
 ###############################################################################
-# Copyright (c) 2013-2015 - present Angelo Zerr and others.
+# Copyright (c) 2015 - present Angelo Zerr and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -13,5 +13,15 @@
 ###############################################################################
  -->
 <plugin>
-     		 	
+
+  <extension point="org.eclipse.debug.core.launchConfigurationTypes">
+    <launchConfigurationType
+        name="%GruntLaunchConfigurationDelegate.name"
+        delegate="tern.eclipse.ide.grunt.core.launch.GruntLaunchConfigurationDelegate"
+        modes="run"               
+        id="tern.eclipse.ide.grunt.core.launch"
+        category="org.eclipse.ui.externaltools" >
+    </launchConfigurationType>
+  </extension>
+  
 </plugin>
